--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "fancy-log": "^1.3.3",
     "fs-extra": "^7.0.1",
     "gulp": "^4.0.0",
-    "gulp-cheerio": "^0.6.3",
+    "gulp-cheerio": "https://github.com/epfl-si/gulp-cheerio/",
     "gulp-concat": "^2.6.1",
     "gulp-consolidate": "^0.2.0",
     "gulp-eslint": "^5.0.0",
@@ -70,12 +70,12 @@
     "gulp-postcss": "^9.0.0",
     "gulp-rename": "^1.4.0",
     "gulp-replace": "^1.0.0",
-    "gulp-sass": "https://github.com/mxmason/gulp-sass#feature/update-node-sass",
+    "gulp-sass": "^5.0.0",
     "gulp-size": "^3.0.0",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-stylelint": "^13",
-    "gulp-svgo": "^2.1.1",
-    "gulp-svgstore": "^7.0.1",
+    "gulp-svgo": "https://github.com/epfl-si/gulp-svgo/",
+    "gulp-svgstore": "^8.0.0",
     "gulp-uglify": "^3.0.2",
     "jquery": "^3.4.1",
     "latest-version": "^5.1.0",
